fix: Adjust color picker spacing when name of color is too long for small screens

--- a/packages/facets/src/components/InspirationPhotos/ColorPins.scss
+++ b/packages/facets/src/components/InspirationPhotos/ColorPins.scss
@@ -117,3 +117,33 @@
     position: relative;
   }
 }
+
+@include respond-below(xs) {
+  .pin__wrapper {
+    &__pin-add {
+      width: auto;
+    }
+
+    &__pin-add-icon {
+      margin: 0 0.5rem;
+      &--left {
+        margin: 0 0.5rem;
+      }
+    }
+  }
+
+  .pin__name {
+    &__wrapper {
+      padding: 0.5rem;
+    }
+  }
+
+  .pin__content {
+    right: -50px;
+    top: 30px;
+    z-index: 0;
+    &--left {
+      left: -50px;
+    }
+  }
+}
